--- a/src/CQRS.Infrastructure/CQRS.Infrastructure.csproj
+++ b/src/CQRS.Infrastructure/CQRS.Infrastructure.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CQRS.Application\CQRS.Application.csproj" />
+    <ProjectReference Include="..\CQRS.Domain\CQRS.Domain.csproj" />
+    <ProjectReference Include="..\CQRS.Shared\CQRS.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
